chore: delete graphql shit, remove usage of preview features